--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,16 @@
 body {
     background-color:darkcyan;
 }
-h1 {
+
+.title {
+    width:30%;
+    padding:10px;
     background-color:orange;
-    padding:40px;
-    width:20%;
-    font-size: 2em;
-    margin: 10px;
+    margin:10px;
+    text-align: center;
+}
+h1 {
+    font-size: 1.5em;
 }
 p {
     color:green;
@@ -21,7 +25,7 @@ p {
 #randomNumBox {
     background-color: green;
     margin:10px;
-    width:20%;
+    width:25%;
     height:111px;
     float:left;
 
@@ -29,6 +33,31 @@ p {
 #winLossBox {
     background-color: lightblue;
     margin:10px;
-    width:10%;
+    width:20%;
     float:left;
+}
+
+.crystals {
+    clear:both;
+}
+.crystal {
+    width:100px;
+    height:100px;
+}
+.totalText {
+    color:white;
+
+}
+.totalTextbox {
+    padding:10px;
+    margin:10px;
+    background-color:darkolivegreen;
+    width:20%;
+
+}
+#totalScore {
+    background-color: green;
+    margin:10px;
+    width:20%;
+    height:111px;
 }
