--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,31 @@
 body {
-    background-color:darkcyan;
+    background-color:#66B2B2;
 }
 
 .title {
     width:50%;
     padding:10px;
-    background-color:orange;
+    background-color:#008080;
     margin:10px;
     text-align: center;
 }
 h1 {
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 2em;
+    color:#fff;
 }
 
 p {
-    color:green;
-    padding:20px;
+    font-family:Arial, Helvetica, sans-serif;
+    color:black;
+    padding:12px;
 }
+.results {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:32px;
+    color:#fff;
+}
+
 .instructions {
     background-color: beige;
     margin: 10px;
@@ -24,46 +33,62 @@ p {
     width:50%;
 }
 #randomNumBox {
-    background-color: green;
+    background-color:#008080;
     margin:10px;
     width:25%;
-    height:111px;
+    height:93px;
     float:left;
+    text-align:center;
+    padding-top:20px;
 
 }
 #winLossBox {
-    background-color: lightblue;
+    background-color:#008080;
     margin:10px;
-    width:20%;
+    width:25%;
     float:left;
 }
 
+#totalScore {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:60px;
+    color:#fff;
+}
+
 .container {
+    margin-left:20px;
+    width:50%;
     clear:both;
 }
 .totalText {
+    font-family:Arial, Helvetica, sans-serif;
     color:white;
-
+    font-size: 30px;
 }
 .totalTextbox {
+    background-color:#008080;
     padding:10px;
     margin:10px;
-    background-color:darkolivegreen;
-    width:20%;
-
+    width:29%;
+    float:left;
 }
+
 #crystal-0, #crystal-1, #crystal-2, #crystal-3 {
     width:100px;
     height:100px;
 }
 #totalBox {
-    background-color: green;
-    margin:10px;
+    background-color:#008080;
+    margin-top:10px;
     width:20%;
-    height:111px;
+    float:left;
+    text-align: center;
+    height:70px;
+    padding-top:4px;
 }
-#randomNumber {
-    font-family: 'Times New Roman', Times, serif;
-    font-size:2em;
 
+#randomNumber {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:80px;
+    color:#fff;
 }
